fix: image distortion

--- a/pages/index.css
+++ b/pages/index.css
@@ -548,7 +548,7 @@ template {
 .intro {
   padding: 20px 0 0 120px;
   display: grid;
-  grid-template-columns: minmax(0, 460px) minmax(0, 810px);
+  grid-template-columns: minmax(0, 34.8%) minmax(0, 62.2%);
   grid-template-rows: repeat(4, minmax(-webkit-min-content, -webkit-max-content));
   grid-template-rows: repeat(4, minmax(min-content, max-content));
   gap: 50px;
@@ -657,19 +657,19 @@ template {
   grid-column: 2/3;
   grid-row: 1/6;
   display: grid;
-  grid-template-columns: minmax(0, 200px) minmax(0, 610px);
+  grid-template-columns: minmax(0, 24.6%) minmax(0, 29.6%) minmax(0, 45.8%);
   grid-template-rows: minmax(0, 327px) minmax(0, 509px);
 }
 @media screen and (max-width: 767px) {
   .intro__grid-wrapper {
     grid-column: 1;
     grid-row: 2/3;
-    grid-template-columns: minmax(30px, 150px) minmax(254px, 1fr);
+    grid-template-columns: minmax(0, 10.5%) minmax(0, 71.8%) minmax(0, 17.7%);
     grid-template-rows: minmax(0, 151px) minmax(197px, 1fr);
   }
 }
 .intro__picture {
-  grid-column: 2/3;
+  grid-column: 2/4;
   grid-row: 1/3;
   width: 100%;
   height: 100%;
@@ -680,42 +680,42 @@ template {
   grid-column: 1/3;
   z-index: 1;
   grid-row: 2/3;
-  max-width: 440px;
-  max-height: 300px;
-  border-radius: 20px;
+  width: 100%;
   background-color: #F4F4F4;
   position: -webkit-sticky;
   position: sticky;
+  height: 0;
   top: 421px;
-  margin-bottom: 79px;
+  margin-bottom: 45%;
+}
+.intro__sticky-wrapper:before {
+  content: "";
+  display: block;
+  padding-top: 68%;
+  background-color: inherit;
+  border-radius: 20px;
   box-shadow: -20px 60px 220px 0px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 767px) {
   .intro__sticky-wrapper {
-    position: static;
-    max-width: 234px;
-    max-height: 160px;
-    margin: 0;
+    position: relative;
+    top: 0;
   }
 }
 .intro__sticky-image {
-  margin: 20px 50px;
-  width: calc(100% - 100px);
-  height: calc(100% - 40px);
-  border-radius: inherit;
-}
-@media screen and (max-width: 767px) {
-  .intro__sticky-image {
-    margin: 10.7px 26.7px;
-    width: calc(100% - 53.4px);
-    height: calc(100% - 21.4px);
-  }
+  margin: 4.5% 12%;
+  width: 76%;
+  height: auto;
+  border-radius: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .merks {
   padding: 120px 120px 0;
   display: grid;
-  grid-template-columns: fit-content(650px) auto;
+  grid-template-columns: 54% auto;
   grid-template-rows: repeat(2, auto);
   grid-column-gap: 80px;
   position: relative;
@@ -742,13 +742,6 @@ template {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-@media screen and (min-width: 767px) {
-  .merks__picture {
-    height: 100%;
-  }
 }
 @media screen and (max-width: 767px) {
   .merks__picture {
@@ -778,7 +771,7 @@ template {
   justify-content: flex-end;
 }
 .merks__author {
-  margin: 0;
+  margin: 20px 0 0;
   font-weight: 500;
   font-size: 20px;
   line-height: 32px;
@@ -1188,20 +1181,24 @@ template {
 .training {
   padding: 150px 120px 120px;
   display: grid;
-  grid-template-columns: minmax(-webkit-min-content, -webkit-max-content) fit-content(580px);
-  grid-template-columns: minmax(min-content, max-content) fit-content(580px);
+  grid-template-columns: minmax(0, -webkit-max-content) maxmin(0, 13.3%) maxmin(0, 48%);
+  grid-template-columns: minmax(0, max-content) maxmin(0, 13.3%) maxmin(0, 48%);
   grid-template-rows: repeat(3, minmax(-webkit-min-content, -webkit-max-content));
   grid-template-rows: repeat(3, minmax(min-content, max-content));
-  grid-column-gap: 160px;
+  grid-column-gap: 13.3%;
   position: relative;
   color: inherit;
+}
+@media screen and (max-width: 1023px) {
+  .training {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-row-gap: 40px;
+  }
 }
 @media screen and (max-width: 767px) {
   .training {
     margin: 0 18px;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-row-gap: 40px;
     padding: 80px 0 60px;
   }
   .training::before {
@@ -1240,13 +1237,23 @@ template {
   grid-row: 1/3;
   max-width: 460px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1279px) {
+  .training__paragraph {
+    max-width: 350px;
+  }
+}
+@media screen and (max-width: 1023px) {
   .training__paragraph {
     margin-top: 0;
     grid-column: 1/2;
     grid-row: 3/4;
+  }
+}
+@media screen and (max-width: 767px) {
+  .training__paragraph {
     font-size: 12px;
     line-height: 18px;
+    max-width: 100%;
   }
 }
 .training__paragraph_dark {
@@ -1255,13 +1262,14 @@ template {
 .training__list {
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 30px 0 0;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .training__list {
+    margin-top: 0;
     grid-column: 1/2;
     grid-row: 4/5;
   }
@@ -1298,15 +1306,11 @@ template {
   grid-column: 2/3;
   grid-row: 1/4;
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-@media screen and (min-width: 767px) {
-  .training__image {
-    height: 100%;
-  }
-}
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .training__image {
     grid-column: 1/2;
     grid-row: 2/3;
