--- a/scss/blocks/_merks.scss
+++ b/scss/blocks/_merks.scss
@@ -1,7 +1,7 @@
 .merks {
   padding: 120px 120px 0;
   display: grid;
-  grid-template-columns: fit-content(650px) auto;
+  grid-template-columns: 54% auto;
   grid-template-rows: repeat(2, auto);
   grid-column-gap: 80px;
   position: relative;
@@ -22,11 +22,6 @@
     grid-column: 1/2;
     grid-row: 1/3;
     width: 100%;
-    object-fit: cover;
-
-    @media screen and (min-width: 767px) {
-      height: 100%;
-    }
 
     @include mobile {
       grid-column: 1;
@@ -58,7 +53,7 @@
   }
 
   &__author {
-    margin: 0;
+    margin: 20px 0 0;
     @include font-style(
       $author-weight,
       $author-size,
