--- a/scss/blocks/_training.scss
+++ b/scss/blocks/_training.scss
@@ -1,17 +1,20 @@
 .training {
   padding: 150px 120px 120px;
   display: grid;
-  grid-template-columns: minmax(min-content, max-content) fit-content(580px);
+  grid-template-columns: minmax(0, max-content) maxmin(0, 13.3%) maxmin(0, 48%);
   grid-template-rows: repeat(3, minmax(min-content, max-content));
-  grid-column-gap: 160px;
+  grid-column-gap: 13.3%;
   position: relative;
   color: inherit;
 
-  @include mobile {
-    margin: 0 18px;
+  @media screen and (max-width: 1023px) {
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-row-gap: 40px;
+  }
+
+  @include mobile {
+    margin: 0 18px;
     padding: 80px 0 60px;
 
     &::before {
@@ -38,12 +41,20 @@
     grid-row: 1/3;
     max-width: 460px;
 
-    @include mobile {
+    @media screen and (max-width: 1279px) {
+      max-width: 350px;
+    }
+
+    @media screen and (max-width: 1023px) {
       margin-top: 0;
       grid-column: 1/2;
       grid-row: 3/4;
+    }
+
+    @include mobile {
       font-size: $paragrapth-size-mobile;
       line-height: $paragrapth-height-mobile;
+      max-width: 100%;
     }
 
     &_dark {
@@ -54,12 +65,13 @@
   &__list {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 30px 0 0;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
 
-    @include mobile {
+    @media screen and (max-width: 1023px) {
+      margin-top: 0;
       grid-column: 1/2;
       grid-row: 4/5;
     }
@@ -103,13 +115,10 @@
     grid-column: 2/3;
     grid-row: 1/4;
     width: 100%;
+    height: 100%;
     object-fit: cover;
 
-    @media screen and (min-width: 767px) {
-      height: 100%;
-    }
-
-    @include mobile {
+    @media screen and (max-width: 1023px) {
       grid-column: 1/2;
       grid-row: 2/3;
     }
